--- a/privacy/index.html
+++ b/privacy/index.html
@@ -243,7 +243,9 @@
 					'phone': '',
 					'url': 'https://finansist-rzn.ru/privacy/',
 					'city': 'Рязань',
-					'utm_source': "Финансист Рязани Рязань"
+					'utm_source': "Финансист Рязани Рязань",
+					'source_id': "627",
+					'broker_id': "17"
 				},
 				
 
