--- a/products/dengi-pod-pts/index.html
+++ b/products/dengi-pod-pts/index.html
@@ -358,7 +358,9 @@
 					'phone': '',
 					'url': 'https://finansist-rzn.ru/products/dengi-pod-pts/',
 					'city': 'Рязань',
-					'utm_source': "Финансист Рязани Рязань"
+					'utm_source': "Финансист Рязани Рязань",
+					'source_id': "627",
+					'broker_id': "17"
 				},
 				
 
