deploy: 87fa3fd71974dbe99e4ff9844037855a6c496b5d

--- a/contacts/index.html
+++ b/contacts/index.html
@@ -153,7 +153,7 @@
 <p>Наш <a href="https://wa.me/+79657127761">WhatsApp</a></p>
 </li>
 <li>
-<p>Наш адрес <a href="https://2gis.ru/ryazan/firm/70000001022050857?m=39.775548%2C54.631736%2F16">г. Рязань ул. Солотчинское шоссе, дом 2, литера А, помещение H6</a></p>
+<p>Наши адреса:</p>
 </li>
 </ul>
 
